deployments/06_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: hbr-keycloak
spec:
  tls:
    - hosts:
      - keycloak.192.168.49.2.nip.io
      secretName: tls-secret
  rules:
  - host: keycloak.192.168.49.2.nip.io 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
